add 1 example experience

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<h1 class="section-header">Experiences</h1>
 			<ul>
 				<li>
-					
+					8 months ABAP Developer
 				</li>
 			</ul>
 		</div>
