--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 							<li><span>Phone </span> 0168 340 8828</li>
 							<li>
 								<ul class="social-links" >
-									<li><a href="www.facebook.com/luv.sunday"></a></li>
-									<li><a href="www.gplus.com/luv.sunday"></a></li>
-									<li><a href="www.facebook.com/luv.sunday"></a></li>
+									<li><a href="http://www.facebook.com/luv.sunday"></a></li>
+									<li><a href="http://www.gplus.com/luv.sunday"></a></li>
+									<li><a href="http://www.facebook.com/luv.sunday"></a></li>
 								</ul>
 							</li>
 						</ul>			
@@ -128,13 +128,15 @@
 		<div class="section-wrapper" id="experiences" name="experiences">
 			<div class="section-inner-wrapper">
 				<h1 class="section-header">Contact Me</h1>		
-				<form>
-					<input type="text"></input>
-					<input type="text"></input>
-					<textarea></textarea>
+				<form id="contact-form" class="clearfix">
+					<input type="text" placeholder="Your name" class="input-content"></input>
+					<input type="text" placeholder="Your email" class="input-content"></input>
+					<textarea class="input-content" placeholder="Your message"></textarea>
 					<button>send</button>
-				</form>			
+				</form>	
+				<div id="contact-pic"></div>		
 			</div>
+
 		</div>
 	</div>
 	<footer>
