fixed section header

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<div id="info-content-wrapper">
 					<div id="my-name-wrapper">
 						<h2 id="my-name">Hoàng Tiến Đạt</h2>
-						<h3 id="main-job-title">Web Developer</h3>					
+						<h3 id="main-job-title">Beautiful and successful web design is my passion</h3>					
 					</div>
 					<div id="left-info-col" class="info-col">
 						<ul class="basic-info-col">
